css changes - email id overlapping issue fixed

--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -244,6 +244,7 @@ body {
     }
     td {
       vertical-align: top;
+      word-break: break-word;
     }
   }
   .inner-table {
